--- a/package.json
+++ b/package.json
@@ -4,20 +4,48 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "build": "tsc",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint '**/*.{js,ts,tsx}'",
+    "format": "prettier --write '**/*.{js,ts,tsx,json,md}'"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "expo": "~51.0.21",
+    "expo-font": "~12.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.4.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-saga": "^1.3.0",
+    "victory-native": "^41.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-native": "^0.73.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.52.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-expo": "^0.0.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-native": "^4.1.0",
+    "prettier": "^3.1.0",
+    "prettier-eslint": "^16.1.2",
+    "typescript": "^4.4.4"
   },
   "private": true
 }
