--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.4.0",
+    "react-native-svg-transformer": "^1.5.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
