aes file for expo build apk

--- a/app.json
+++ b/app.json
@@ -18,13 +18,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.emreergul.zCoin"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "ee8fc512-24f5-4aa0-8ab4-55e712b3ac96"
+      }
+    }
   }
 }
